<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:gravity="center"
        android:text="@string/titleViewNew" />
    <TextView 
        android:layout_marginTop="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dateView"
        android:textSize="20dp" />
    <TextView
        android:id="@+id/dateTextNew" 
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <TextView 
        android:layout_marginTop="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeView"
        android:textSize="20dp" />
    <TextView 
        android:id="@+id/placeTextNew"
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <TextView 
        android:layout_marginTop="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/coordView"
        android:textSize="20dp" />
    <TextView
        android:id="@+id/coordTextNew" 
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <TextView 
        android:layout_marginTop="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/infView"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    
	    <EditText
	        android:id="@+id/infEditText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:cursorVisible="true"
	        android:hint="@string/hint"
	        android:inputType="textMultiLine"
	        android:maxLines="4" />

	    <Button 
	        android:id="@+id/saveButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="25dp"
	        android:text="@string/buttonTitle"/>
    
    </LinearLayout>

</LinearLayout>