<?xml version="1.0" encoding="utf-8"?>
    
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >
		    <TextView 
		        android:id="@+id/aboutApp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/app_name"
		        android:gravity="center"
		        android:textSize="25dp" />
		    
		    <TextView 
		        android:id="@+id/aboutTitle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/aboutTitleText"
		        android:textSize="15dp" />
		    
		    <TextView 
		        android:id="@+id/aboutSubTitle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/aboutSubTitleText"
		        android:textSize="15dp" />
		    
		    <TextView 
		        android:id="@+id/aboutInstrTitle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"
		        android:text="@string/aboutInstrText"
		        android:textSize="20dp"
		        android:gravity="center"/>
		    
		    <TextView 
		        android:id="@+id/aboutTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/aboutText" />
    	</LinearLayout>
    </ScrollView>